# thesis-financial-instruments-service

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: admin.py  jobs.py
app/cli/: download_model.py  evaluate.py  ocr.py  validate.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  session.py
app/llm/: engine.py  extract.py  postprocess.py  prompts.py  schemas.py
app/ocr/: base.py  paddle.py  preprocess.py  tesseract.py
app/schemas/: jobs.py
app/services/: jobs.py  pipeline.py
app/storage/: paths.py  writer.py
app/ui/: __init__.py  demo_content.py  login_gate.py
app/validation/: bundle_validation_sample.py  metrics.py  normalize.py  regex_baseline.py  report.py  runner.py  storage.py
app/workers/: tasks.py
docker/: Dockerfile  entrypoint.sh
scripts/: colab_gpu_setup.sh  fetch_validation_bundle.sh
tests/: conftest.py  test_api_jobs.py  test_corrections.py  test_extraction.py
